Agrego últimas notaciones

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -102,6 +102,8 @@ isbn="978-3-030-03427-6"
     ACTUS_Taxonomy,
     author = {ACTUS},
     title = {ACTUS Taxonomy},
+    year = 2019,
+    month = Jun,
     howpublished = "\url{https://www.actusfrf.org/taxonomy}"
 }
 
@@ -109,14 +111,16 @@ isbn="978-3-030-03427-6"
     ACTUS_Techspecs,
     author = {ACTUS},
     title = {ACTUS Technical Specification},
-    YEAR = {2018},
-    MONTH = Nov,
+    year = {2018},
+    month = Nov,
     howpublished = "\url{https://www.actusfrf.org/techspecs}"
 }
 @misc{
     ACTUS_Dictionary_Terms,
     author = {ACTUS},
     title = {ACTUS Dictionary Terms},
+    year = {2019},
+    month = Jun,
     howpublished = "\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-terms.json}"
 }
 
@@ -124,6 +128,8 @@ isbn="978-3-030-03427-6"
     ACTUS_Dictionary_States,
     author = {ACTUS},
     title = {ACTUS Dictionary States},
+    year = {2019},
+    month = Jun,
     howpublished = "\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-states.json}"
 }
 
@@ -131,7 +137,8 @@ isbn="978-3-030-03427-6"
     ACTUS_Dictionary_Events,
     author = {ACTUS},
     note = {Online; accessed 17 April 2022},
-    year=2019,
+    year= {2019},
+    month = Aug,
     title = {ACTUS Dictionary Events},
     howpublished = "\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-event-types.json}"
 }
